Changed syntax to support Java8